# harjoitustyo

./: .gitignore  README.md  app.py  decrypt.py  encrypt.py  generator.py  keys.py  maarittelydokumentti  primet.py  primetlista.py  pyproject.toml  rsa.py  testausdokumentti  tests.py
raportit/: maarittelydokumentti  testausdokumentti  testausdokumentti.md  toteutusdokumentti
src/: algo_test.py  app.py  decrypt.py  encrypt.py  generator.py  keys.py  primet.py  primetlista.py
viikkoraportit/: raportti1.txt  raportti2.txt  raportti3.txt  raportti4.txt  raportti5.txt  raportti6.txt  raportti7.txt  toteutusdokumentti
